Se agregan las siguientes vistas: VistaHistorioco, VistaDetallePedido, Revendedor, VistaProducto. ALE.

--- a/src/VistaMenuAivon.form
+++ b/src/VistaMenuAivon.form
@@ -53,6 +53,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Pedidos"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jm_PedidoActionPerformed"/>
+          </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jmi_Pedido">
               <Properties>
