--- a/src/Vistas/VistaProducto.form
+++ b/src/Vistas/VistaProducto.form
@@ -179,7 +179,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jl_IdPedido">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Id Pedido"/>
+        <Property name="text" type="java.lang.String" value="Id Producto"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
@@ -261,11 +261,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jb_BuscarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jb_Limpiar">
       <Properties>
         <Property name="text" type="java.lang.String" value="LIMPIAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jb_LimpiarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
