Se trabaja con el codigo de "VistaRevendedor"   ALE.

--- a/src/Vistas/VistaCampaña.form
+++ b/src/Vistas/VistaCampaña.form
@@ -156,6 +156,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtf_IdCampa&#xf1;a">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtf_IdCampa&#xf1;aActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jtf_FechaInicio">
     </Component>
